# rust-game

./: Cargo.toml  README.md
assets/HDR/: forest.exr
assets/meshes/: Cart.glb  Dir_Test.glb  Goal.glb  Map.glb  Material_Test.glb  Monkey.glb  Plane.glb  Rectangle.glb
backup/: OLDmodel.rs  OldMain.rs
src/: main.rs  model.rs
src/engine/: ecs.rs  engine.rs  input_manager.rs  input_state.rs  instance.rs  material.rs  mesh.rs  mod.rs  skybox.rs
src/engine/car/: car.rs  mod.rs
src/shaders/: lighting.frag
src/system/: mod.rs  system.rs
src/system/shaders/: ambient.frag  deferred.frag  deferred.vert  directional.frag  light_obj.frag  skybox.frag  skybox.vert
